<resources>
    <string name="app_name">CV.Wizard</string>
    <string name="welcome_text"> The ultimate CV generating tool</string>

    <string name="title_activity_details">DetailsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="optional">Optional</string>
    <string name="education_card_pool">education card pool</string>

    <!--Entry menu -->
    <string name="generate_file_button">Sign in</string>

    <!-- Personal Details Tab -->
    <string name="personal_details_topic">Personal details and contact info</string>
    <string name="edittexts_error_message">Field is empty or not filled correctly</string>

    <!-- Education Tab -->
    <string name="military_service_topic">Military Service</string>
    <string name="role">What was your role?</string>
    <string name="corps">Where did you served?</string>
    <string name="service_date">Service period</string>
    <string name="notes">Notes</string>

    <string name="academy_topic">Academy Info</string>
    <string name="academy_name">School \\ Academy name</string>
    <string name="Degree_title">Degree Title</string>
    <string name="Field_of_study">Field of study</string>
    <string name="description">Description</string>
    <string name="study_period">Study Period</string>
    <string name="fromyear">From Year</string>
    <string name="toyear">To Year (or expected)</string>

    <!-- Experience Tab -->
    <string name="workplace_topic">Recent Workplace</string>
    <string name="workplace_company_name">Company name</string>
    <string name="workplace_role">Position</string>
    <string name="workplace_responsabilities">Responsibilities</string>
    <string name="workplace_period">Work Period</string>
    <string name="workplace_website">Companys website</string>


    <string-array name="yearsOfServiceStart">
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
    </string-array>

    <string-array name="yearsOfServiceEnd">
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
    </string-array>
    <string name="title_activity_account_lobby">AccountLobby</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- files context menu -->
    <string name="context_menu_title">Select action</string>
    <string name="context_menu_openfile">Open/Edit file</string>
    <string name="context_menu_deletefile">Delete file</string>

</resources>
