<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/default_padding"
    app:cardPreventCornerOverlap="true"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    app:cardElevation="@dimen/cardview_default_elevation"
    android:background="@color/cardview_light_background"
    app:cardUseCompatPadding="true">

    <ImageView
        android:id="@+id/educaton_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|end"
        android:tint="@color/color_grey"
        android:layout_margin="@dimen/default_padding"
        android:visibility="invisible"
        android:src="@drawable/ic_cancel_black_24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <TextView
            style="@style/topic_textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/academy_topic" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/academy_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Degree_title" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Field_of_study" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="top"
                android:hint="@string/description" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/start_of_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding"
                android:entries="@array/yearsOfServiceStart"
                android:prompt="@string/fromyear"
                android:spinnerMode="dialog"></android.support.v7.widget.AppCompatSpinner>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/end_of_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding"
                android:entries="@array/yearsOfServiceEnd"
                android:prompt="@string/toyear"
                android:spinnerMode="dialog"></android.support.v7.widget.AppCompatSpinner>

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/appCompatImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="225dp"
                android:src="@drawable/ic_add_circle_outline_black_24dp"
                android:visibility="invisible" />

        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>