<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp"
    app:cardPreventCornerOverlap="true"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    android:elevation="@dimen/cardview_default_elevation"
    android:background="@color/cardview_light_background"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/default_padding"
        android:elevation="10dp"
        >
            <android.support.v7.widget.AppCompatTextView
                android:layout_gravity="center_horizontal"
                android:text="@string/military_service_topic"
                style="@style/topic_textViewStyle"
                />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/corps"/>
        </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_padding">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="@string/role"
                    android:id="@+id/textInputEditText2" />
            </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="3"
                android:hint="@string/notes"
                android:id="@+id/textInputEditText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatTextView
            style="@style/topic_textViewStyle"
            android:text="@string/service_date"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding">

            <android.support.v7.widget.AppCompatSpinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/start_of_service"
                android:layout_margin="@dimen/default_padding"
                ></android.support.v7.widget.AppCompatSpinner>
            <android.support.v7.widget.AppCompatSpinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/end_of_service"
                android:layout_margin="@dimen/default_padding"
                ></android.support.v7.widget.AppCompatSpinner>
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_circle_outline_black_24dp"
                android:layout_marginLeft="215dp"
                android:visibility="invisible"
                android:id="@+id/appCompatImageButton" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/educaton_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|end"
        android:tint="@color/color_grey"
        android:clickable="true"
        android:layout_margin="@dimen/default_padding"
        android:src="@drawable/ic_cancel_black_24dp"/>
</android.support.v7.widget.CardView>